2008-11-03  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/20081103-1.c: New test.

2008-11-03  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/array5.adb New test.

2008-11-03  Richard Guenther  <rguenther@suse.de>
	Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37573
	* gcc.c-torture/execute/pr37573.c: New testcase.

2008-11-03  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37858
	* gcc.dg/pr37858.c: New test.

2008-11-03  Tobias Burnus  <burnus@net-b.de>

	PR fortran/37821
	* gfortran.dg/include_4.f90: New.
	* gfortran.dg/include_5.f90: New.
	* gfortran.dg/include_4.inc: New.

2008-11-03  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/37445
	* gfortran.dg/host_assoc_call_3.f90: New test.
	* gfortran.dg/host_assoc_call_4.f90: New test.
	* gfortran.dg/host_assoc_function_4.f90: New test.

2008-11-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/37542
	* gcc.dg/tree-ssa/ssa-pre-22.c: New testcase.
	* gcc.c-torture/compile/20081101-1.c: Likewise.

2008-11-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/37991
	* gcc.c-torture/compile/pr37991.c: New testcase.

2008-11-01  Hans-Peter Nilsson  <hp@axis.com>

	PR target/37939
	* gcc.target/cris/biap.c: New test.

2008-11-01  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/36426
	* gfortran.dg/proc_decl_19.f90: New.

2008-11-01  Steven G. Kargl  <kargls@comcast.net>

	PR fortran/19925
	* gfortran.dg/initialization_20.f90: New test.
	* gfortran.dg/initialization_21.f90: Ditto.

2008-11-01  Daniel Kraft  <d@domob.eu>

	PR fortran/35681
	* gfortran.dg/mvbits_4.f90: New test.

2008-11-01  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/36322
	PR fortran/36463
	* gfortran.dg/proc_decl_17.f90: New.
	* gfortran.dg/proc_decl_18.f90: New.

2008-11-01  Richard Guenther  <rguenther@suse.de>

	PR middle-end/37976
	* gcc.c-torture/compile/pr37976.c: New testcase.

2008-11-01  Dennis Wassel  <dennis.wassel@gmail.com>

	PR fortran/37159
	* gfortran.dg/random_seed_1.f90: New testcase.